# 2019-08-05 Upgrade the Vert.x to 3.8.0