@@ -31,6 +31,7 @@
 		<fasterxml-uuid.version>3.2.0</fasterxml-uuid.version>
 		<hikariCP.version>3.3.1</hikariCP.version>
 		<mysql.driver.version>5.1.46</mysql.driver.version>
+		<mysql8.driver.version>8.0.17</mysql8.driver.version>
 		<jtds.driver.version>1.3.1</jtds.driver.version>
 	</properties>
 
