@@ -13,6 +13,7 @@ package io.roxa.vertx.rx.jdbc;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Consumer;
@@ -100,6 +101,7 @@ public class JdbcManager extends BaseVerticle {
 	}
 
 	private void registerInternal(String dsName, Consumer<JdbcExecutor> consumer) {
+		Objects.requireNonNull(dsName);
 		JdbcExecutor item = jdbcExecutors.get(dsName);
 		if (item != null) {
 			consumer.accept(item);
